# SimpleMail

./: .gitignore  BUILD_DEPLOYMENT.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci-cd.yml
issues/: main.md  phases.md
scripts/: build-deploy.sh  performance-test.sh  security-test.sh
src/: App.tsx  AppRouter.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: performance.rs
src-tauri/src/: credentials.rs  fs_commands.rs  imap_client.rs  imap_commands.rs  integration_tests.rs  main.rs  security_tests.rs  smtp_client.rs  smtp_commands.rs  test_utils.rs
src-tauri/src/commands/: attachments.rs  email.rs  email_actions.rs  email_ops.rs  email_ops_tests.rs  email_secure.rs  folder_ops.rs  mod.rs  search.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/email/: parser.rs
src-tauri/src/models/: account.rs  email.rs  folder.rs  mod.rs
src/components/account/: AccountSettings.tsx
src/components/editor/: rich-text-editor.tsx
src/components/layout/: main-layout.tsx  main-nav.tsx  sidebar.tsx
src/components/mail/: SmtpComposer.tsx  SmtpComposerModal.tsx  attachments.tsx  components.test.tsx  compose-email-enhanced.tsx  compose-email.tsx  compose-mail.tsx  email-viewer.tsx  mail-detail.tsx  mail-list-item.tsx  mail-list.tsx  mail-view.tsx  search.tsx  sidebar.tsx  unified-mail-view.tsx  virtualized-email-list.tsx
src/components/ui/: icons.tsx  toast.tsx  toaster.tsx  use-toast.ts
src/contexts/: toast-context.tsx
src/hooks/: useMail.ts  useMails.ts
src/lib/: email-utils.ts
src/pages/: account-management.tsx  login-page.tsx  mail-page.tsx
src/services/: accountService.ts  draftService.ts  imapService.ts  mailService.ts  smtpService.ts
src/types/: account.ts  email.ts  mail.ts
tests/e2e/: mail-client.spec.ts
